Apply Java coding standard improvements across the codebase
Co-authored-by: 044720182 <117749681+044720182@users.noreply.github.com>